# HW_13_WEB

./: pyproject.toml
Django/: 1.sqlite3  db.sqlite3
Django/hw_project/: settings.py  urls.py
Django/quotes/: forms.py  models.py  scrap.py  urls.py  utils.py  views.py
Django/quotes/migrations/: 0001_initial.py
Django/quotes/static/quotes/: feel_site.css  style.css
Django/quotes/static/styles/: add_author.css  add_post.css  author_detail.css
Django/quotes/templates/authors/: author_detail.html
Django/quotes/templates/quotes/: add_author.html  add_post.html  base.html  feel_site.html  generate_quote.html  index.html  quote.html  quotes_by_tag.html
Django/quotes/templatetags/: extract.py
Django/users/: forms.py  models.py  urls.py  views.py
Django/users/migrations/: 0001_initial.py  0002_delete_tag_alter_quote_tags.py  0003_author_confirmed_author_user.py  0004_remove_author_confirmed.py
Django/users/templates/users/: base.html  login.html  registration.html  signup.html
Django/utils/: add_qoutes_to_mongo.py  autors.json  connect.py  migrate_data.py  migration.py  models.py
FastAPI/: db.py  docker-compose.yml  main.py
FastAPI/migrations/versions/: 3601b02fa6c8_init.py  9613a7926fcb_init.py  c000fd60ced7_models_update.py  c522c6606e45_init.py
FastAPI/postgres-data/: postmaster.pid
FastAPI/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
FastAPI/postgres-data/pg_xact/: 0000
FastAPI/src/: middleware.py  schemas.py
FastAPI/src/conf/: config.py
FastAPI/src/database/: db.py  models.py
FastAPI/src/repository/: contacts.py  users.py
FastAPI/src/routes/: auth.py  contacts.py  users.py
FastAPI/src/services/: auth.py  email.py
(+51 files in other folders)
