[tool.poetry]
name = "hw13"
version = "0.1.0"
description = ""
authors = ["taras55001 <taras5500@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.100.0"}
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-jwt-auth = "^0.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
django = "^4.2.4"
fastapi-mail = "^1.4.1"
openai = "^0.27.8"
mongoengine = "^0.27.0"
beautifulsoup4 = "^4.12.2"
redis = "^4.6.0"
django-environ = "^0.10.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
